stuf/src/p6/tests/t010.err
Semantic error on line 6: Variable 'handle' previously declared.
